# hopla

./: .coveragerc  .gitignore  .travis.yml  CONTRIBUTING.rst  README.rst  pyproject.toml  setup.cfg  setup.py
.github/workflows/: codespell.yml  documentation.yml  linters.yml  pep8.yml  pycodestyle.yml  pydoclint.yml  release-documentation.yml  ruff.yml  testing.yml
dev/: .buildinfo  authors.html  ci.html  contributing.html  index.html  license.html  maintenance.html  objects.inv  py-modindex.html  quickstart.html  search.html  searchindex.js  sg_execution_times.html  versions.html  whats_new.html
dev/_downloads/2dc37cfddb3953fa5a25cede74981bf8/: plot_ccc_flux_multi_tasks.ipynb
dev/_downloads/6248f4849b42cedd68ef6e010cf37196/: plot_ccc.ipynb
dev/_downloads/7a60c90fc2333b4d3d29f8172100957c/: plot_ccc_multi_tasks.py
dev/_downloads/7f8a55a31e283bff299041462c92c000/: plot_ccc_oneshot_multi_tasks.py
dev/_downloads/83e7e7a33b0ebf8733b20f71bf6df8dc/: plot_ccc_joblib_multi_tasks.py
dev/_downloads/8a5c17174a2d1af49a7ff4d933498d49/: plot_ccc_joblib_multi_tasks.ipynb
dev/_downloads/8dc0d1dfc3391be1d067574f143782d0/: plot_pbs.py
dev/_downloads/93b785bd023c038ed063d9bde926725a/: plot_slurm.py
dev/_downloads/9577c50a7e8b30ed9282920f2386e2ba/: plot_ccc_multi_tasks.ipynb
dev/_downloads/aa11d4309713d5a4b1fc5fb9d5b7050d/: plot_pbs.ipynb
dev/_downloads/aa1e5a1fab924b652563401aba8389e4/: plot_ccc_flux_multi_tasks.py
dev/_downloads/b72a4264c0f130fef21a1e198e167290/: plot_ccc.py
dev/_downloads/e437f7758807cd0e107be941048f6966/: plot_slurm.ipynb
dev/_sources/: authors.rst.txt  ci.rst.txt  index.rst.txt  maintenance.rst.txt  sg_execution_times.rst.txt  versions.rst.txt
dev/_sources/auto_examples/: index.rst.txt  plot_ccc.rst.txt  plot_ccc_flux_multi_tasks.rst.txt  plot_ccc_joblib_multi_tasks.rst.txt  plot_ccc_multi_tasks.rst.txt  plot_ccc_oneshot_multi_tasks.rst.txt  plot_pbs.rst.txt  plot_slurm.rst.txt  sg_execution_times.rst.txt
dev/_sources/modules/: hopla.ccc.rst.txt  hopla.cli.rst.txt  hopla.pbs.rst.txt  hopla.rst.txt  hopla.slurm.rst.txt  hopla.utils.rst.txt  index.rst.txt  search.rst.txt
dev/_sources/user_guide/: cli.rst.txt  clusters.rst.txt  how_it_works.rst.txt  index.rst.txt  what_is.rst.txt
dev/_static/: custom.css
dev/auto_examples/: index.html  plot_ccc.html  plot_ccc_flux_multi_tasks.html  plot_ccc_joblib_multi_tasks.html  plot_ccc_multi_tasks.html  plot_ccc_oneshot_multi_tasks.html  plot_pbs.html  plot_slurm.html  sg_execution_times.html
dev/modules/: hopla.ccc.html  hopla.cli.html  hopla.config.html  hopla.executor.html  hopla.html  hopla.pbs.html  hopla.slurm.html  hopla.utils.html  index.html  search.html
dev/user_guide/: cli.html  clusters.html  how_it_works.html  index.html  introduction.html  what_is.html
doc/: highlights.csv  requirements.txt
doc/user_guide/: cli.rst
examples/: README.txt  data.tsv  experiment.toml  plot_ccc.py  plot_pbs.py  plot_slurm.py
hopla/: __init__.py  ccc.py  ccc_batch_template.txt  cli.py  converter.py  executor.py  info.py  pbs.py  pbs_batch_template.txt  scheduler.py  signals.py  utils.py  workers.py
hopla/demo/: __init__.py  demo.py  my_ls_script.py
hopla/resources/: ccc_batch_template.txt  ccc_multi_batch_template.txt  joblib_script_template.txt  oneshot_script_template.txt  pbs_batch_template.txt  slurm_batch_template.txt  worker.sh
hopla/test/: test.py
hopla/tests/: test_converter.py  test_examples.py  test_scheduler.py  test_workers.py
stable/: authors.html  index.html  license.html  objects.inv  py-modindex.html  quickstart.html  searchindex.js  sg_execution_times.html  versions.html
stable/_downloads/2dc37cfddb3953fa5a25cede74981bf8/: plot_ccc_flux_multi_tasks.ipynb
stable/_sources/: ci.rst.txt  contributing.rst.txt  index.rst.txt  license.rst.txt  sg_execution_times.rst.txt
stable/auto_examples/: plot_ccc.html  plot_ccc_flux_multi_tasks.html  plot_ccc_joblib_multi_tasks.html  plot_ccc_oneshot_multi_tasks.html  plot_pbs.html  plot_slurm.html  sg_execution_times.html
stable/modules/: hopla.html  hopla.utils.html
stable/user_guide/: cli.html  clusters.html
(+19 files in other folders)
