[build-system]
requires = ["setuptools>=61.2"]
build-backend = "setuptools.build_meta"

[project]
name = "hopla"
readme = "README.rst"
requires-python = ">=3.9"
authors = [
    {name = "hopla developers", email = "antoine.grigis@cea.fr"},
]
license = {text = "CeCILL-B"}
classifiers = [
    "Development Status :: 1 - Planning",
    "Environment :: Console",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "tqdm"
]
dynamic = ["version"]

[project.urls]
Source = "https://github.com/AGrigis/hopla"
Tracker = "https://github.com/AGrigis/hopla/issues"

[tool.setuptools]
platforms = ["Linux", "OSX"]
include-package-data = true

[tool.setuptools.dynamic]
version = {attr = "hopla.info.__version__"}

[tool.setuptools.packages.find]
exclude = ["doc"]
namespaces = false

[tool.setuptools.package-data]
hopla = [
    "*_batch_template.txt",
]

[tool.build_sphinx]
source-dir = "doc"
build-dir = "doc/build"
all_files = "1"

[tool.ruff.lint]
extend-select = [
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "ISC",  # flake8-implicit-str-concat
    "PIE",  # flake8-pie
    "PYI",  # flake8-pyi
    "SIM",  # flake8-simplify
    "FLY",  # flynt
    "I",    # isort
    "N",    # pep8-naming
    "PERF", # Perflint
    "PGH",  # pygrep-hooks
    "UP",   # pyupgrade
    "FURB", # refurb
    "RUF",
]
ignore = [
]

[tool.ruff]
extend-exclude = [
    "tests",
]

[tool.ruff.lint.per-file-ignores]
"*/__init__.py" = ["F401"]
