[build-system]
requires = ["setuptools>=77.0.3", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "hopla"
readme = "README.rst"
requires-python = ">=3.11"
authors = [{name = "hopla developers"}]
license = "CECILL-B"
license-files = ["LICENSE"]
classifiers = [
    "Development Status :: 1 - Planning",
    "Environment :: Console",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS :: MacOS X",
    "Programming Language :: Python",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "tqdm",
    "pandas",
]
dynamic = ["version"]

[project.scripts]
hoplacli = "hopla.cli:main"

[project.urls]
Development = "https://github.com/brainprepdesk/hopla"
issues = "https://github.com/brainprepdesk/hopla/issues"
homepage = "https://brainprepdesk.github.io/hopla/stable/"

[tool.setuptools]
include-package-data = true

[tool.setuptools.dynamic]
version = {attr = "hopla.__version__"}

[tool.setuptools.packages.find]
exclude = ["doc"]
namespaces = false

[tool.setuptools.package-data]
hopla = [
    "resources/*_batch_template.txt",
    "resources/worker.sh",
]

[tool.build_sphinx]
source-dir = "doc"
build-dir = "doc/build"
all_files = "1"

[tool.ruff.lint]
extend-select = [
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "ISC",  # flake8-implicit-str-concat
    "PIE",  # flake8-pie
    "PYI",  # flake8-pyi
    "SIM",  # flake8-simplify
    "FLY",  # flynt
    "I",    # isort
    "N",    # pep8-naming
    "PERF", # Perflint
    "PGH",  # pygrep-hooks
    "UP",   # pyupgrade
    "FURB", # refurb
    "RUF",
    "W293", # blank-line-with-whitespace
    "W291", # trailing whitespace

]
ignore = [
    "UP038", # Use `X | Y` in `isinstance` call instead of `(X, Y)`

]

[tool.ruff]
extend-exclude = [
    "tests",
]

[tool.ruff.lint.per-file-ignores]
"*/__init__.py" = ["F401"]

[tool.codespell]
builtin = "clear,rare,en-GB_to_en-US"
ignore-words = "./.github/codespellignore.txt"
skip = "./.git,*.bib,./AUTHORS.rst"
quiet-level = 2

[tool.pydoclint]
style = "numpy"
require-return-section-when-returning-nothing = false
check-arg-order = true
check-return-types = false
check-class-attributes = false
check-style-mismatch = true
check-arg-defaults = false
skip-checking-raises = false
treat-property-methods-as-class-attributes = true
should-document-private-class-attributes = true
arg-type-hints-in-docstring=true
arg-type-hints-in-signature=false
should-document-star-arguments=true
